; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_playlist.c_vlclua_playlist_list.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_playlist.c_vlclua_playlist_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_playlist_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_playlist_list(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @vlclua_get_playlist_internal(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @vlc_playlist_Lock(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @vlc_playlist_Count(i32* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @lua_createtable(i32* %12, i64 %13, i32 0)
  store i64 0, i64* %5, align 8
  br label %15

15:                                               ; preds = %29, %1
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %15
  %20 = load i32*, i32** %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @vlc_playlist_Get(i32* %21, i64 %22)
  %24 = call i32 @push_playlist_item(i32* %20, i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = load i64, i64* %5, align 8
  %27 = add i64 %26, 1
  %28 = call i32 @lua_rawseti(i32* %25, i32 -2, i64 %27)
  br label %29

29:                                               ; preds = %19
  %30 = load i64, i64* %5, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %5, align 8
  br label %15

32:                                               ; preds = %15
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @vlc_playlist_Unlock(i32* %33)
  ret i32 1
}

declare dso_local i32* @vlclua_get_playlist_internal(i32*) #1

declare dso_local i32 @vlc_playlist_Lock(i32*) #1

declare dso_local i64 @vlc_playlist_Count(i32*) #1

declare dso_local i32 @lua_createtable(i32*, i64, i32) #1

declare dso_local i32 @push_playlist_item(i32*, i32) #1

declare dso_local i32 @vlc_playlist_Get(i32*, i64) #1

declare dso_local i32 @lua_rawseti(i32*, i32, i64) #1

declare dso_local i32 @vlc_playlist_Unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
